# zettelkasten-cli

./: .devcontainer.json  .pre-commit-config.yaml  BUILD.md  CHANGELOG.md  README.md  digest.txt  mise.toml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: release-please.yaml  workflow.yaml
scripts/: setup
tests/: test_cli.py
zettelkasten_cli/: __init__.py  config.py  daily_note.py  exceptions.py  main.py  new_note.py  output.py  periodic_notes.py  utils.py
zettelkasten_cli/models/: __init__.py  note.py  periodic_note.py
zettelkasten_cli/services/: __init__.py  editor.py  template.py
zk/: config.py  daily_note.py  day.py  main.py  new_note.py  utils.py
