[project]
name = "zettelkasten-cli"
version = "1.0.3"
description = "A CLI for managing your Neovim + Obsidian Zettelkasten"
authors = [{ name = "Mischa van den Burg" }]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "typer[all]>=0.12.3",
]

[project.scripts]
zk = "zettelkasten_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]
